...
                            modifier = if (chords || progressions) Modifier.testTag("destination_title").semantics { heading() } else Modifier,
                            style = MaterialTheme.typography.titleMedium)
                    },
                    navigationIcon = {
                        if (destination != FoundationDestination.Home) {
                            IconButton(onClick = { state.eventSink(FoundationEvent.NavigateBack) },
                                modifier = Modifier.testTag("navigate_up")) {
                                Icon(painterResource(R.drawable.ic_arrow_back), stringResource(if (
                                    destination == FoundationDestination.Feature(FeatureId.Training) &&
                                        state.training.stage !is TrainingStageUi.Navigation
                                ) R.string.training_back else if (state.returningToLesson) R.string.learning_back
                                else if (destination == FoundationDestination.Feature(FeatureId.Learning) ||
                                    destination == FoundationDestination.Feature(FeatureId.LearningCourses)) when (val page = state.learning.page) {
...
